--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <h3>What we offer:</h3>
   <ol>
     <li>Website w/ login features</li>
+    <li>Regular Webpage</li>
+    <li>Webpage Hosting</li>
   </ol>
 </html>
