--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
     <li>Regular Webpage</li>
     <li>Webpage Hosting</li>
   </ol>
+
+  <a href="https://average32.vercel.app/">YourAverageHost</a>
 </html>
